--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Libre Baskerville', serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -9,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-weight{
     width: 50%;
@@ -24,4 +26,18 @@ section{
     background-image: linear-gradient(salmon, tomato) ;
     padding:10px 40px;
     border-radius: 5px;
+}
+.top-banner{
+    background-image: url(images//top-banner.png);
+    background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-bottom: 30px;
+    
+}
+.paragraf{
+    padding-right: 60px;
 }
